[package]
name = "ROCKET"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.66"
reqwest = { version = "0.12.5", features = ["blocking", "default-tls"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
urlencoding = "2.1.3"
